Add mock enpoint for scale
